--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ h1 {
     color: cyan;
 }
 body {
-    background-image: url(https://www.elegantthemes.com/blog/wordpress/best-atom-packages);
+    background-image: url(https://www.elegantthemes.com/blog/wp-content/uploads/2020/02/000-Best-Atom-Packages.png);
 }
 h1:hover {
     text-transform: capitalize;
