--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,34 @@
-h1 {
-    text-align: center;
-    color: cyan;
-}
 body {
-    background-image: url(https://scontent.fdac80-1.fna.fbcdn.net/v/t1.6435-9/127287109_102817561687757_7912566739111615036_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=e3f864&_nc_eui2=AeEvdCRxkqLECO4vFHjXIjJjRYOCE-6_UoRFg4IT7r9ShDK5F9S1CZwzbZhrJWwE1tFi8uW85lkFrdIJoHaQGHIM&_nc_ohc=Arec4QA3OFMAX86FK0U&_nc_ht=scontent.fdac80-1.fna&oh=00_AT83U2BmIKPKIKNB7FgckqlTs3YjbRSsKWEFfMYVW3IxVg&oe=62DD996C);
-    scale: device-size;
-}
-h1:hover {
-    text-transform: uppercase;
-    color: red;
-    background-color: black;
-}
+    margin: 0;
+  }
+  
+  main {
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
+  
+  section {
+    position: relative;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+  }
+  
+  .no-parallax {
+    background-color: #111;
+    z-index: 999;
+  }
+  
+  section h1 {
+    text-align: center;
+    font-size: 4rem;
+    font-family: sans-serif;
+  }
+  
+  .parallax h1 {
+    width: 60%;
+    font-size: 2rem;
+  }
