--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,55 @@
 body {
     margin: 0;
-  }
+}
   
-  main {
+main {
     height: 100vh;
     overflow-x: hidden;
     overflow-y: auto;
-  }
+    perspective: 2px;
+}
   
-  section {
+section {
+    transform-style: preserve-3d;
     position: relative;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     color: white;
-  }
+}
   
-  .no-parallax {
+.no-parallax {
     background-color: #111;
     z-index: 999;
-  }
+}
   
-  section h1 {
+section h1 {
     text-align: center;
     font-size: 4rem;
     font-family: sans-serif;
-  }
+}
   
-  .parallax h1 {
+.parallax h1 {
     width: 60%;
     font-size: 2rem;
-  }
+}
+  
+.parallax::after {
+    content: " ";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transform: translateZ(-1px) scale(1.5);
+    background-size: 100%;
+    z-index: -1;
+}
+  
+.bg::after {
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url("https://picsum.photos/1080/720");
+   background-size: cover;
+}
+  
