--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,8 @@ section h1 {
 }
   
 .bg::after {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url("https://picsum.photos/1080/720");
-   background-size: cover;
+    background: linear-gradient(rgb(255, 217, 0), rgba(255, 123, 0, 0.5)),
+    url("https://picsum.photos/1080/720");
+    background-size: cover;
 }
   
