--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,18 @@ section h1 {
     font-size: 4rem;
     font-family: sans-serif;
 }
+
+section h2 {
+    text-align: center;
+    font-size: 4rem;
+    font-family: sans-serif;
+}
+
+section h4 {
+    text-align: center;
+    font-size: 4rem;
+    font-family: sans-serif;
+}
   
 .parallax h1 {
     width: 60%;
